# maze-solving-rover

./: BOM.docx  Contest 2 Report.docx  MYLFF Item List.xlsx  Starter Package Item List.xlsx
Arduino Code/src/: 1_Registers.ino  Servo.ino
Code/src/: 2_Basic_Functions.ino  3_Test_Functions.ino  4_Setup.ino  5_New_Functions.ino  BT_Matlab_Arduino.m  Bluetooth_Control.ino  Measure_angle_Arduino_MPU6050.ino  PID_Control.ino  run.ino
Guides/: turtlebot_script.sh
Guides/Maps/: map_g2_t1.pgm  map_g2_t2.pgm
ROS Code/: Commands
ROS Code/mie443_contest1/mie443_contest1/src/: contest1.cpp
ROS Code/mie443_contest2/__MACOSX/: __mie443_contest2
ROS Code/mie443_contest2/__MACOSX/mie443_contest2/boxes_database/: __coords.xml  __gazebo_coords.xml  __templates.xml
ROS Code/mie443_contest2/mie443_contest2/: Instruction.docx  _DS_Store
ROS Code/mie443_contest2/mie443_contest2/boxes_database/: coords.xml
ROS Code/mie443_contest2/mie443_contest2/include/: imagePipeline.h  imagePipeline_old.h
ROS Code/mie443_contest2/mie443_contest2/maps/: _DS_Store
ROS Code/mie443_contest2/mie443_contest2/src/: contest2.cpp  imagePipeline.cpp  integration_and_file_writing.cpp
ROS Code/mie443_contest2/mie443_contest2/worlds/: world_2.world
ROS Code/mie443_stage/mie443_stage/: CMakeLists.txt  package.xml
ROS Code/mie443_stage/mie443_stage/launch/: turtlebot_in_stage_contest1.launch  turtlebot_in_stage_contest2.launch  turtlebot_in_stage_contest3.launch
ROS Code/mie443_stage/mie443_stage/maps/: open.yaml
ROS Code/mie443_stage/mie443_stage/maps/stage/: maze.world  open.world
(+6 files in other folders)
